[package]
name = "age-bot"
version = "0.1.0"
authors = ["Kyung Mo Kweon <kkweon@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0.82"                          # A generic serialization/deserialization framework
serde_json = "1.0.33"                     # A JSON serialization file format
serde_urlencoded = "0.5.4"    # `x-www-form-urlencoded` meets Serde
serde_derive = "1.0.82"                   # Macros 1.1 implementation of #[derive(Serialize, Deserialize)]
actix-web = "0.7.16"                  # Actix web is a simple, pragmatic and extremely fast web framework for Rust.
chrono = "0.4.6"                    # Date and time library for Rust
futures = "0.1.25"                # An implementation of futures and streams featuring zero allocations, composability, and itera…
bytes = "0.4.11"            # Types and traits for working with bytes
failure = "0.1.3"                             # Experimental error handling abstraction.
env_logger = "0.6.0"                # A logging implementation for `log` which is configured via an environment variable.
slack-verify = "0.1.1"    # Verify Slack requests
